5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3392/executions/1578_2897.log
== TEST (2019-03-21 11:41:51) 
-- CODE:
n=4

# Leitura de valores de entrada e conversao para inteiro
num = int(input(n))

# Impressao do dobro do numero
print(n)
-- OUTPUT:
44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:40) 
-- CODE:
n=4
x=2*n
# Leitura de valores de entrada e conversao para inteiro
num = int(input(n))

# Impressao do dobro do numero
print(x)
-- OUTPUT:
48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:45) 
-- CODE:
n=4
x=2*n
# Leitura de valores de entrada e conversao para inteiro
num = int(input(n))

# Impressao do dobro do numero
print(x)
-- OUTPUT:
48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:53:54) 
-- CODE:
n=4
num=int(input("n"))







-- OUTPUT:
48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:53:59) 
-- CODE:
n=4
num=int(input("n"))







-- OUTPUT:
48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:15:07) 
-- CODE:
n=4
print(n)
num=int(input(n))







-- OUTPUT:
4
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:15:11) 
-- CODE:
n=4
print(n)
num=int(input(n))







-- OUTPUT:
4
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:15:45) 
-- CODE:
n=4
print(n)
num=int(input(2*n))







-- OUTPUT:
4
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:15:59) 
-- CODE:
n=4
print(n)
num=int(input(2*n))







-- EXECUTION TIME:
0.180441
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
4
8
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
4
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:16:19) 
-- CODE:
n=4
print(n)
num=int(input(2*n))







-- OUTPUT:
4
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:16:20) 
-- CODE:
n=4
print(n)
num=int(input(2*n))







-- OUTPUT:
4
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:16:22) 
-- CODE:
n=4
print(n)
num=int(input(2*n))







-- OUTPUT:
4
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:16:24) 
-- CODE:
n=4
print(n)
num=int(input(2*n))







-- OUTPUT:
4
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:16:55) 
-- CODE:
n=4
print(n)
num=int(input("2*n"))







-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:16:59) 
-- CODE:
n=4
print(n)
num=int(input("2*n"))







-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:17:39) 
-- CODE:
num=4
print(num)
num=int(input(2*n))







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    num=int(input(2*n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:17:41) 
-- CODE:
num=4
print(num)
num=int(input(2*n))







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    num=int(input(2*n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:17:43) 
-- CODE:
num=4
print(num)
num=int(input(2*n))







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    num=int(input(2*n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:17:45) 
-- CODE:
num=4
print(num)
num=int(input(2*n))







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    num=int(input(2*n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:18:06) 
-- CODE:
num=4
print(num)
num=int(input(2*num))







-- EXECUTION TIME:
0.223233
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
4
8
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
4
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:18:09) 
-- CODE:
num=4
print(num)
num=int(input(2*num))







-- EXECUTION TIME:
0.146539
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
4
8
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
4
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:18:11) 
-- CODE:
num=4
print(num)
num=int(input(2*num))







-- EXECUTION TIME:
0.222106
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
4
8
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
4
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:18:12) 
-- CODE:
num=4
print(num)
num=int(input(2*num))







-- EXECUTION TIME:
0.232215
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
4
8
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
4
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:18:12) 
-- CODE:
num=4
print(num)
num=int(input(2*num))







-- EXECUTION TIME:
0.0831809
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1578/2897/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:19:01) 
-- CODE:
num=4
print(num)
num=int(input())







-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:19:03) 
-- CODE:
num=4
print(num)
num=int(input())







-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:19:04) 
-- CODE:
num=4
print(num)
num=int(input())







-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:19:55) 
-- CODE:
num=4
print(num)
num=int(input(num*2)







-- ERROR:
File "XXXX", line 10
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:19:58) 
-- CODE:
num=4
print(num)
num=int(input(num*2)







-- ERROR:
File "XXXX", line 10
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:24:19) 
-- CODE:
num=int(input("digite um numero:"))
dobro=2*n
print("o dobro do numero", dobro)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    dobro=2*n
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:24:21) 
-- CODE:
num=int(input("digite um numero:"))
dobro=2*n
print("o dobro do numero", dobro)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    dobro=2*n
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:25:45) 
-- CODE:
num=int(input("digite um numero:"))
dobro=n*2
print("o dobro do numero", dobro)







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    dobro=n*2
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:25:50) 
-- CODE:
num=int(input("digite um numero:"))
dobro=n*2
print("o dobro do numero", dobro)







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    dobro=n*2
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:27:00) 
-- CODE:
num=int(input("digite um numero:"))
dobro=num*2
print("o dobro do numero", dobro)








-- OUTPUT:
o dobro do numero 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:27:02) 
-- CODE:
num=int(input("digite um numero:"))
dobro=num*2
print("o dobro do numero", dobro)








-- OUTPUT:
o dobro do numero 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:27:03) 
-- CODE:
num=int(input("digite um numero:"))
dobro=num*2
print("o dobro do numero", dobro)








-- OUTPUT:
o dobro do numero 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:27:53) 
-- CODE:
num=int(input("digite um numero:"))
dobro=num*2
print("o dobro do numero", dobro)








-- EXECUTION TIME:
0.147049
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
o dobro do numero 2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
o dobro do numero 888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:28:24) 
-- CODE:
num=int(input("digite um numero:"))
dobro=num*2
print("o dobro do numero", dobro)








-- OUTPUT:
o dobro do numero 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:28:28) 
-- CODE:
num=int(input("digite um numero:"))
dobro=num*2
print("o dobro do numero", dobro)








-- OUTPUT:
o dobro do numero 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:28:29) 
-- CODE:
num=int(input("digite um numero:"))
dobro=num*2
print("o dobro do numero", dobro)








-- OUTPUT:
o dobro do numero 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:29:49) 
-- CODE:
num=int(input("digite um numero:"))
dobro=num*2
print("o dobro do numero", dobro)








-- EXECUTION TIME:
0.182075
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
o dobro do numero 2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
o dobro do numero 888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:30:05) 
-- CODE:
num=int(input("digite um numero:"))
dobro=num*2
print("o dobro do numero", dobro)








-- OUTPUT:
o dobro do numero 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:30:05) 
-- CODE:
num=int(input("digite um numero:"))
dobro=num*2
print("o dobro do numero", dobro)








-- OUTPUT:
o dobro do numero 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:30:07) 
-- CODE:
num=int(input("digite um numero:"))
dobro=num*2
print("o dobro do numero", dobro)








-- OUTPUT:
o dobro do numero 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:30:09) 
-- CODE:
num=int(input("digite um numero:"))
dobro=num*2
print("o dobro do numero", dobro)








-- OUTPUT:
o dobro do numero 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:31:32) 
-- CODE:
num=int(input("digite o numero: "))
dobro=num*2
print("o dobro do numero", dobro)









-- OUTPUT:
o dobro do numero 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:31:35) 
-- CODE:
num=int(input("digite o numero: "))
dobro=num*2
print("o dobro do numero", dobro)









-- OUTPUT:
o dobro do numero 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:31:37) 
-- CODE:
num=int(input("digite o numero: "))
dobro=num*2
print("o dobro do numero", dobro)









-- OUTPUT:
o dobro do numero 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:31:38) 
-- CODE:
num=int(input("digite o numero: "))
dobro=num*2
print("o dobro do numero", dobro)









-- OUTPUT:
o dobro do numero 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:31:38) 
-- CODE:
num=int(input("digite o numero: "))
dobro=num*2
print("o dobro do numero", dobro)









-- OUTPUT:
o dobro do numero 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:31:39) 
-- CODE:
num=int(input("digite o numero: "))
dobro=num*2
print("o dobro do numero", dobro)









-- OUTPUT:
o dobro do numero 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 12:31:39) 
-- CODE:
num=int(input("digite o numero: "))
dobro=num*2
print("o dobro do numero", dobro)









-- OUTPUT:
o dobro do numero 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 12:31:50) 
-- CODE:
num=int(input("digite o numero: "))
dobro=num*2
print("o dobro do numero", dobro)









-- EXECUTION TIME:
0.181294
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
o dobro do numero 2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
o dobro do numero 888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:25:18) 
-- CODE:
num=int(input("digite o numero: "))
dobro=num*2
print("o dobro do numero", dobro)









-- OUTPUT:
o dobro do numero 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:26:30) 
-- CODE:
num=int(input("digite o numero: "))
dobro=num*2
print("o dobro do numero: ", dobro)










-- OUTPUT:
o dobro do numero:  2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:30:42) 
-- CODE:
num=int(input(""))
dobro=num*2
print("", dobro)

















-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:31:26) 
-- CODE:
num=int(input("num"))
dobro=num*2
print("num", dobro)


















-- OUTPUT:
num 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:31:30) 
-- CODE:
num=int(input("num"))
dobro=num*2
print("num", dobro)


















-- OUTPUT:
num 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:32:44) 
-- CODE:
num=int(input("digite o numero: "))
dobro=num*2
print("dobro desse numero: ", dobro)




















-- OUTPUT:
dobro desse numero:  2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:33:57) 
-- CODE:
num = int(input("digite o numero: "))
dobro=num*2
print("dobro desse numero: ", dobro)





















-- OUTPUT:
dobro desse numero:  2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 08:34:31) 
-- CODE:
num = int(input("digite o numero: "))
dobro=num*2
print("dobro desse numero: ", dobro
	  
	  )





















-- EXECUTION TIME:
0.206978
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
dobro desse numero:  2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
dobro desse numero:  888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:34:53) 
-- CODE:
num = int(input("digite o numero: "))
dobro=num*2
print("dobro desse numero: ", dobro )






















-- OUTPUT:
dobro desse numero:  2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:35:34) 
-- CODE:
num = int(input("digite o numero: "))
dobro=num*2
print("dobro desse numero: ", dobro )























-- OUTPUT:
dobro desse numero:  2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:37:58) 
-- CODE:
num = int(input("digite o numero: "))
dobro=num*2
print("dobro desse numero: ", dobro )
print(num)






















-- OUTPUT:
dobro desse numero:  2468
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:38:01) 
-- CODE:
num = int(input("digite o numero: "))
dobro=num*2
print("dobro desse numero: ", dobro )
print(num)






















-- OUTPUT:
dobro desse numero:  2468
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:38:50) 
-- CODE:
num = int(input("digite o numero: "))
dobro=num*2
print("dobro desse numero: ", dobro )
print(num)
print(num*2)























-- OUTPUT:
dobro desse numero:  2468
1234
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:38:59) 
-- CODE:
num = int(input("digite o numero: "))
dobro=num*2
print("dobro desse numero: ", dobro )
print(num)
print(num*2)























-- OUTPUT:
dobro desse numero:  2468
1234
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 08:39:10) 
-- CODE:
num = int(input("digite o numero: "))
dobro=num*2
print("dobro desse numero: ", dobro )
print(num)
print(num*2)























-- EXECUTION TIME:
0.295468
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
dobro desse numero:  2468
1234
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
dobro desse numero:  888
444
888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:40:49) 
-- CODE:
num = int(input(21))

print(21, dobro )
print(num)
























-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(21, dobro )
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:40:54) 
-- CODE:
num = int(input(21))

print(21, dobro )
print(num)
























-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(21, dobro )
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:40:58) 
-- CODE:
num = int(input(21))

print(21, dobro )
print(num)
























-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(21, dobro )
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:42:08) 
-- CODE:
num = int(input(3))
print(3, dobro )
























-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(3, dobro )
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:42:12) 
-- CODE:
num = int(input(3))
print(3, dobro )
























-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(3, dobro )
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:43:12) 
-- CODE:
num = int(input("digite o numer: "))

























-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(3, dobro )
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:43:16) 
-- CODE:
num = int(input("digite o numer: "))

























-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(3, dobro )
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:43:19) 
-- CODE:
num = int(input("digite o numer: "))

























-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(3, dobro )
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:44:00) 
-- CODE:
num = int(input("digite o numer: "))
print(num,dobro)


























-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(num,dobro)
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:44:04) 
-- CODE:
num = int(input("digite o numer: "))
print(num,dobro)


























-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(num,dobro)
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:46:09) 
-- CODE:
num = int(input("23"))
dobro=2*num
print("23",dobro)





























-- OUTPUT:
23 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:46:13) 
-- CODE:
num = int(input("23"))
dobro=2*num
print("23",dobro)





























-- OUTPUT:
23 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:46:20) 
-- CODE:
num = int(input("23"))
dobro=2*num
print("23",dobro)





























-- OUTPUT:
23 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:47:10) 
-- CODE:
num = int(input("digite o numero"))
dobro=2*num
print("num",dobro)






























-- OUTPUT:
num 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:47:17) 
-- CODE:
num = int(input("digite o numero"))
dobro=2*num
print("num",dobro)






























-- OUTPUT:
num 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:48:16) 
-- CODE:
num = int(input("digite o numero= "))
dobro=2*num
print("num= ",dobro)































-- OUTPUT:
num=  2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:48:23) 
-- CODE:
num = int(input("digite o numero= "))
dobro=2*num
print("num= ",dobro)































-- OUTPUT:
num=  2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:49:37) 
-- CODE:
num = int(input())
dobro=2*num
print(dobro)
































-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 08:49:42) 
-- CODE:
num = int(input())
dobro=2*num
print(dobro)
































-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 08:49:54) 
-- CODE:
num = int(input())
dobro=2*num
print(dobro)
































-- EXECUTION TIME:
0.110434
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
